# generate-mock-data-handball

./: .gitignore  README.md  justfile  main.py  pyproject.toml
experiments/: README.md  baseline.py  evaluate.py  features.py  gcn_cluster.py  plot.py  run_all.py
experiments/results/: FINDINGS.md
experiments/supervised/: README.md  dataset.py  report.py  train_gcn.py  train_lstm.py  train_rf.py
experiments/supervised/results/: FINDINGS.md  gcn_metrics.json  lstm_metrics.json  rf_metrics.json
experiments/unsupervised/: README.md  run_all.py  umap_cluster.py
experiments/unsupervised/results/: metrics.json
src/handball_mock/: __init__.py  cli.py  config.py  court.py  generator.py  labeler.py  physics.py  types.py  visualizer.py  writer.py
src/handball_mock/scenarios/: __init__.py  defense_42.py  defense_51.py  defense_60.py  doppelpass.py  kreislaeuferspiel.py  kreuzung.py  parallelstos.py  rueckpass.py  transition.py
